# convex-mpc-unitree-go2

./: .gitignore  README.md  centroidal_mpc_hpipm.json  environment.yml  pyproject.toml
convex_mpc/: centroidal_mpc.py  plot_helper.py  test_MPC.py
convex_mpc/cpp/: CMakeLists.txt  centroidal_mpc.cpp  centroidal_mpc.hpp  centroidal_mpc_acados.cpp  centroidal_mpc_acados.hpp  main.cpp
convex_mpc/cpp/c_generated_code/centroidal_mpc_hpipm/: acados_solver_centroidal_mpc_hpipm.c  acados_solver_centroidal_mpc_hpipm.h  centroidal_mpc_hpipm.json
convex_mpc/cpp/scripts/: generate_mpc_solver.py
simpleMPC/: dynamics.py  go2_robot_data.py  locomotion_mpc.py  mujoco_model.py  reference_trajectory.py  swing_leg_controller.py  test_MPC.py  test_sparse_QP.py
src/convex_mpc/python/: com_trajectory.py  go2_robot_data.py  mujoco_model.py
src/python/convex_mpc/: gait.py  mujoco_model.py
unitree_mujoco/unitree_robots/go2/: go2.xml
