[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "convex-mpc-unitree-go2"
version = "1.0.0"
requires-python = ">=3.10,<3.11"
description = "Convex MPC controller stack for Unitree Go2"
readme = "README.md"

[tool.setuptools]
package-dir = {"" = "src/python"}

[tool.setuptools.packages.find]
where = ["src/python"]
